Fix link spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -407,7 +407,7 @@ ul li {
 
 	ul li {
 		width: 100%;
-		margin-top: 10px;
+		margin-top: 15px;
 	}
 
 	ul li:first-child {
@@ -426,7 +426,7 @@ ul li {
 
 	ul li {
 		width: 100%;
-		margin-top: 10px;
+		margin-top: 15px;
 	}
 
 	ul li:first-child {
